mysite/kess/static/kess/style.css
body {
    background-color: #F7D59C;
    color: #F3F0D7;
    text-align: center;
}

.container{
    position: static;
    height: auto;
    width: auto;
    background-color: #5E454B;
    border-radius: 1em;
    margin: 5em auto 1em;
    padding: 2em;
    text-align: left;
}

 /* Detail kess */
.title_detail{
    margin-bottom: 1em;
}

.kess_img{
    margin: 1em 0;
}

.detail-publication-date{
font-size: 10;
margin-top: 6em;
}

.detail_answer{
padding: 2em 0;
}

.userNavbar{
    margin-right: 0px!important;
}

.removeHyperlinkStyling{
  color: inherit;
  text-decoration: inherit;
}

.dep-button{
    color: white !important;
}

.inline{
    display: inline-block;
    vertical-align: top;
}

/*
================================================================================
EMOJI-PICKER
================================================================================
*/

.emoji-mart-title-label{
    display: none;
}

.emoji-mart-preview-skins{
    display: none;
}

span[aria-label="🏬, department_store"]{
    display: none;
}

.dep-button{
    right: 0.4rem !important;
    top: 0.48rem !important;
    color: gray !important;
}

/*
================================================================================
INDEX
================================================================================
*/

.indexTitle{

}

.indexBothBoxes{

}

.indexBox{
    margin: 1em;
    height: 20em;
    width: 45%;
    min-width: 37em;
}

.smallFont{
    font-size: 25px;
}

.link_kess{
  color: #FFFFFF;
  text-decoration: none;
}

.indexContainerTitle{
}

.indexContainerUl{
    list-style: none;
    margin-top: 1em;
}




/*
F7D59C
F3F0D7
5E454B
CEE5D0
*/

